Working : User Register done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/cinesphere
 spring.datasource.password=krishna04
 
-#spring.jpa.hibernate.ddl-auto=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
