--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,11 @@
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>com.razorpay</groupId>
+		    <artifactId>razorpay-java</artifactId>
+		    <version>1.4.3</version>
+		</dependency>
 
 	</dependencies>
 
